# Bootcamp-Exercise-Library

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: blank.yml
converter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
myconverter/: converter.py
test/: converter.py  test_myconverter.py
